# marketflow-ai

./: .gitignore  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_create_users_table.py  0002_add_channels_tables.py  0003_add_facebook_selected_pages.py  0004_add_campaigns_tables.py  0005_add_posts_tables.py  0006_add_posts_image_prompt.py  0007_add_content_plans_and_cadence.py  0008_instagram_tables.py  0009_fb_page_ig_cols.py  0010_post_body_null.py  0011_media_jobs.py  0012_ai_settings_and_admin.py
backend/src/: auth_bearer.py  config.py  database.py  dependencies.py  hashing.py  worker.py
backend/src/ai_settings/: __init__.py  dependencies.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  security.py  services.py
backend/src/auth/: dependencies.py  exceptions.py  jwt.py  models.py  router.py  schemas.py
backend/src/campaigns/: dependencies.py  exceptions.py  models.py  router.py  schemas.py
backend/src/channels/: dependencies.py  exceptions.py  models.py  router.py  schemas.py
backend/src/common/: exceptions.py
backend/src/content_plans/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py
backend/src/dashboard/: __init__.py  router.py  schemas.py
backend/src/media_generation/: dependencies.py  exceptions.py  models.py  router.py  schemas.py
backend/src/posts/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py
backend/tests/: test_channels.py
(+113 files in other folders)
